--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,1 +1,87 @@
-<h2 class="contacts-title">HELLO</h2>
+<section class="contact contact-overlay">
+  <h2 class="visually-hidden">office</h2>
+
+  <div class="contacts container contacts-top">
+        <!-- первая карточка -->
+
+        <div class="contacts__section">
+            <p class="contacts__category">CAFE</p>
+            <p class="contacts__categorycity">Chicago</p>
+            <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+            <p class="contacts__timeday">Monday - Friday</p>
+            <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
+            <p class="contacts__timeday">Saturday - Sunday</p>
+            <p class="contacts__time">08:00 AM 16:00 PM</p>
+
+            <address>
+                <ul class="contacts__list">
+                    <li class="contacts__item link"><a href="tel:+610383766284" class="contacts__tel link">+61(0) 383 766 284</a></li>
+                    <li class="contacts__item link"><a href="mailto:noreply@envato.com" class="contacts__mail link">noreply@envato.com</a></li>
+                </ul>
+            </address>
+
+        </div>
+
+        <!-- вторая карточка -->
+
+        <div class="contacts__section">
+            <p class="contacts__category">FOODTRUCK</p>
+            <p class="contacts__categorycity">Los Angeles</p>
+            <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+            <p class="contacts__timeday">Monday - Friday</p>
+            <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
+            <p class="contacts__timeday">Saturday - Sunday</p>
+            <p class="contacts__time">08:00 AM 16:00 PM</p>
+
+            <address>
+                <ul class="contacts__list">
+                    <li class="contacts__item link"><a href="tel:+610383766284" class="contacts__tel link">+61(0) 383 766 284</a></li>
+                    <li class="contacts__item link"><a href="mailto:noreply@envato.com" class="contacts__mail link">noreply@envato.com</a></li>
+                </ul>
+            </address>
+
+        </div>
+
+        <!-- третья карточка -->
+
+        <div class="contacts__section">
+            <p class="contacts__category">CAFE</p>
+            <p class="contacts__categorycity">New York</p>
+            <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+            <p class="contacts__timeday">Monday - Friday</p>
+            <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
+            <p class="contacts__timeday">Saturday - Sunday</p>
+            <p class="contacts__time">08:00 AM 16:00 PM</p>
+
+            <address>
+                <ul class="contacts__list">
+                    <li class="contacts__item link"><a href="tel:+610383766284" class="contacts__tel link">+61(0) 383 766 284</a></li>
+                    <li class="contacts__item link"><a href="mailto:noreply@envato.com" class="contacts__mail link">noreply@envato.com</a></li>
+                </ul>
+            </address>
+
+        </div>
+  </div>
+
+  <div class="collaboration contacts-bottom">
+      <ul class="collaboration__list">
+          <li class="collaboration__item">
+              <button type="button" class="collaboration__btn">Our Locations
+                  <svg class="collaboration__svg">
+                      <use href="./images/symbol-defs.svg#icon-vector-white"></use>
+                  </svg>
+              </button>
+          </li>
+
+          <li class="collaboration__item">
+              <button type="button" class="collaboration__btntwo">Franchise
+                  <svg class="collaboration__svg-red">
+                      <use href="./images/symbol-defs.svg#icon-vector-red"></use>
+                  </svg>
+              </button>
+          </li>
+      </ul>
+  </div>
+
+
+</section>
