--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -36,59 +36,66 @@
   }
 }
 
-.about__image-cow {
-  margin-bottom: 46px;
-}
-
 // .about__image-cow {
-//   background-image: url(/images/about-cow-mobile.png);
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-position: center;
-//   display: block;
 //   margin-bottom: 46px;
-//   // max-height: 100%;
-//   // max-width: 100%;
-//   width: 280px;
-//   height: 280px;
-//   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-//     background-image: url(/images/about-cow-mobile2x.png);
-//   }
-//   @media screen and (min-width: 767px) {
-//     background-image: url(/images/about-cow-tablet.png);
-//     height: 339px;
-//     width: 340px;
-//     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-//       background-image: url(/images/about-cow-tablet2x.png);
-//     }
-//   }
-//   @media screen and (min-width: 1200px) {
-//     background-image: url(/images/about-cow-desktop.png);
-//     height: 516px;
-//     width: 516px;
-//     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-//       background-image: url(/images/about-cow-desktop2x.png);
-//     }
-//   }
 // }
+
+.about__image-cow {
+  background-image: url(/images/about-cow-mobile.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: block;
+  margin-bottom: 46px;
+  // max-height: 100%;
+  // max-width: 100%;
+  width: 280px;
+  height: 280px;
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: url(/images/about-cow-mobile2x.png);
+  }
+  @media screen and (min-width: 768px) {
+    background-image: url(/images/about-cow-tablet.png);
+    height: 339px;
+    width: 340px;
+    margin-bottom: 0px;
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: url(/images/about-cow-tablet2x.png);
+    }
+  }
+  @media screen and (min-width: 1280px) {
+    background-image: url(/images/about-cow-desktop.png);
+    height: 516px;
+    width: 516px;
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: url(/images/about-cow-desktop2x.png);
+    }
+  }
+}
 
 .about__container {
   padding-left: 30px;
   padding-right: 30px;
   position: relative;
   @media screen and (min-width: 768px) {
-    padding: 0;
-    margin-left: 20px;
-    width: 45%;
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 340px;
+    padding-top: 40px;
+    margin-left: 17px;
+    flex-shrink: 2222;
     position: static;
   }
   @media screen and (min-width: 1280px) {
-    width: 35%;
+    width: 463px;
+    margin-left: 74px;
   }
 }
 
 .about__text {
   @include fonts(12px, 19px, 500, 0);
+  position: sticky;
+  z-index: 3;
   &_black {
     color: $secondaryTextColor;
     margin-bottom: 40px;
@@ -100,25 +107,27 @@
     margin-bottom: 20px;
   }
   @media screen and (min-width: 768px) {
-    @include fonts(14px, 25px, 500, 0);
+    @include fonts(14px, 25px, 500, 0.04em);
   }
   @media screen and (min-width: 1280px) {
-    position: sticky;
-    z-index: 3;
+    // position: sticky;
+    // z-index: 3;
   }
 }
 
-.about__button {
-  min-width: 176px;
+.about__button-link {
+  max-width: 176px;
   margin-top: 17px;
+  display: block;
   background: $primaryTextColor;
   border-radius: 22px;
   border: transparent;
   padding: 12px 39px 12px 36px;
   @include fonts(14px, 18px, 700, 0);
   color: $accentColor;
-  display: flex;
+  display: block;
   align-items: center;
+  // -webkit-appearance: button;
   transition: background-color $animation;
   @media screen and (min-width: 768px) {
     margin-top: 62px;
@@ -146,8 +155,11 @@
   }
   @media screen and (min-width: 1280px) {
     display: block;
-    left: -3%;
-    right: 18%;
-    top: 40%;
+    right: 5%;
+    top: 78%;
   }
+}
+
+.about__page {
+  margin-bottom: 40px;
 }
