добавляет общее медиа-правило для контейнера. делает таблет версию секции

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,5 +1,5 @@
 <section class="customer-review">
-    <div class="container">
+    <div class="container customer-review-container">
         <picture> 
             <source srcset="/images/customer-emily_1x.webp" type="image/webp">    
             <img src="/images/customer-emily_1x.jpg" alt="girl-with-curly-hair" class="customer-img">
