--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -3,13 +3,22 @@
     padding-bottom: 86px;
 }
 
+.customer-review-container{
+    @media screen and(min-width: 768px){
+        padding: 0 74px;
+    }
+    
+}
+
 .review-article-container{
     background-color: #FAFAFA;
-    padding: 0 50px;
-    padding-top: 43px;
-    padding-bottom: 6px;
-    margin-bottom: 30px;
-    
+    padding: 43px 50px 20px 50px;
+    margin-bottom: 14px;
+    @media screen and(min-width: 768px) {
+        padding: 30px 36px 28px 60px;
+        margin-bottom: 8px;
+       
+    }
 }
 
 .review-article{
@@ -17,10 +26,16 @@
     @include fonts(12px, 31px, 500);
     text-align: center;
     padding-left: 7px;
+    padding-right: 16px;
     position: relative;
     z-index: 1;
-    padding-right: 16px;
+    
     background-image: repeating-linear-gradient(transparent, transparent 28px, #E1E1E1 28px, #E1E1E1 29px, transparent 29px, transparent 59px, #E1E1E1 59px, #E1E1E1 60px);
+    @media screen and(min-width: 768px){
+        padding-left: 20px;
+        padding-right: 44px;
+        @include fonts(14px, 30px, 500, 0.04em)
+    }
 }
 
 .customer-quotes{
@@ -32,17 +47,27 @@
     top: -22px;
     left: 4px;
     fill: #E1E1E1;
+    @media screen and(min-width: 768px){
+        top: -25px;
+        left: -26px;
+    }
 }
 
 .customer-img{
     width: 85px; 
     margin: 0 auto;
     margin-bottom: 29px;
+    @media screen and(min-width: 768px){
+        margin-bottom: 19px;
+    }
 }
 
 .dots{
     margin-bottom: 18px;
     text-align: center;
+    @media screen and(min-width: 768px){
+        margin-bottom: 14px;
+    }
 }
 
 .dots__item{
@@ -68,6 +93,10 @@
     text-align: center;
     @include fonts(14px, 26px, 500);
     margin-bottom: 30px;
+    @media screen and(min-width: 768px){
+        margin-bottom: 35px;
+        @include fonts(16px, 30px, 500);
+    }
 }
 
 .slider-dots{
