--- a/src/sass/_container.scss
+++ b/src/sass/_container.scss
@@ -14,9 +14,13 @@
 
   @media screen and (min-width: 768px) {
     width: 768px;    
+    padding-left: 35px;
+    padding-right: 35px;
   }
 
   @media screen and (min-width: 1280px) {
     width: 1280px;
+    padding-left: 115px;
+    padding-right: 115px;
   }
 }
