--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -3,6 +3,7 @@
     background: linear-gradient(180deg, #ffffff 7%, #fff5f6 0, #ffffff 0, #fff5f6 0%);
     margin-left: auto;
     margin-right: auto;
+    display: flex;
     
     @media screen and (min-width: 768px) {
       background: linear-gradient(180deg, #ffffff 15%, #fff5f6, #ffffff, #fff5f6 0%);
@@ -11,16 +12,9 @@
 }
 
 .contacts {
-  margin-bottom: 54px;
-  
   @media screen and (min-width: 768px) {
-    margin-bottom: 81px;
     display: flex;
     justify-content: center;
-  }
-  
-  @media screen and (min-width: 1280px) {
-    margin-bottom: 86px;
   }
 }
 
@@ -39,7 +33,7 @@
   }
   @media screen and (min-width: 768px) and (max-width: 1279px) {
     height: 544px;
-    margin-bottom: 0px;
+    margin-bottom: 81px;
     margin-right: 20px;
     padding: 50px 32px 50px 31px;
     margin-left: 0px;
