--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -5,8 +5,8 @@
     <ul class="products">
         <li class="products__item products__item--pink">
             <div class="box"><picture>
-                <!-- <source srcset="./images/img(2).jpg 1x , ./images/img1-2x.jpg 2x " media="(min-width: 1200px)">
-                                        <source srcset="./images/team-tab1.jpg 1x , ./images/team-tab1-2x.jpg 2x " media="(min-width: 768px)"> -->
+                <source srcset="/images/products-desk1.png 1x , /images/products-desk1-2x.png 2x " media="(min-width: 1280px)">
+    <source srcset="/images/products-tab1.png 1x , /images/products-tab1-2x.png 2x " media="(min-width: 768px)">
                 <source srcset="/images/products-mob1.png 1x , /images/products-mob1-2x.png 2x " media="(min-width: 320px)">
             <img src="/images/products-mob1.png" alt="" class="products__photo">
             </picture>
@@ -26,8 +26,8 @@
         </li>
         <li class="products__item products__item--yellow">
            <div class="box"><picture>
-                <!-- <source srcset="./images/img(2).jpg 1x , ./images/img1-2x.jpg 2x " media="(min-width: 1200px)">
-                            <source srcset="./images/team-tab1.jpg 1x , ./images/team-tab1-2x.jpg 2x " media="(min-width: 768px)"> -->
+                            <source srcset="/images/products-desk2.png 1x , /images/products-desk2-2x.png 2x " media="(min-width: 1280px)">
+                            <source srcset="/images/products-tab2.png 1x , /images/products-tab2-2x.png 2x " media="(min-width: 768px)">
                 <source srcset="/images/products-mob2.png 1x , /images/products-mob2-2x.png 2x " media="(min-width: 320px)"> 
  <img src="/images/products-mob2.png" alt="" class="products__photo">
             </picture>
@@ -45,8 +45,8 @@
         </li>
         <li class="products__item products__item--green">
         <div class="box"> <picture>
-                <!-- <source srcset="./images/img(2).jpg 1x , ./images/img1-2x.jpg 2x " media="(min-width: 1200px)">
-                <source srcset="./images/team-tab1.jpg 1x , ./images/team-tab1-2x.jpg 2x " media="(min-width: 768px)"> -->
+                <source srcset="/images/products-desk3.png 1x , /images/products-desk3-2x.png 2x " media="(min-width: 1280px)">
+                <source srcset="/images/products-tab3.png 1x , /images/products-tab3-2x.png 2x " media="(min-width: 768px)">
                 <source srcset="/images/products-mob3.png 1x , /images/products-mob3-2x.png 2x " media="(min-width: 320px)"> 
                                  <img src="/images/products-mob3.png" alt="" class="products__photo">  
                                  </picture>
