--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -23,9 +23,6 @@
 .products {
   @media screen and (min-width: 768px) {
     display: flex;
-    // justify-content: center;
-    // align-items: center;
-    // flex-direction: row;
   }
 }
 .products__item {
@@ -33,12 +30,10 @@
   border-radius: 24px;
   margin-right: auto;
   margin-left: auto;
-
   display: flex;
-
   justify-content: space-between;
-
   flex-direction: column;
+  position: relative;
   @media screen and (max-width: 767px) {
     width: 280px;
     &:not(:first-child) {
@@ -48,16 +43,24 @@
     &:nth-child(1) {
       margin-top: 144px;
     }
+    padding: 160px 40px 40px 40px;
   }
-  padding: 160px 40px 40px 40px;
-  position: relative;
   @media screen and (min-width: 768px) {
-    width: 220px;
-    flex-basis: calc((100% - 40px) / 3);
+    width: 335px;
     &:not(:last-child) {
       margin-right: 20px;
     }
     margin-top: 150px;
+    padding: 152px 11px 40px 11px;
+  }
+  @media screen and (min-width: 1280px) {
+    padding: 163px 44px 50px 44px;
+    width: 335px;
+    margin: 0;
+    &:not(:last-child) {
+      margin-right: 24px;
+    }
+    margin-top: 250px;
   }
 }
 .products__item--pink {
@@ -76,6 +79,9 @@
   color: $primaryTextColor;
   text-align: center;
   margin-bottom: 30px;
+  @media screen and (min-width: 1280px) {
+    @include fonts(30px, 34px, 400, 0.04em);
+  }
 }
 .products__paragraph {
   font-family: DM Sans;
@@ -84,6 +90,14 @@
   color: $primaryTextColor;
   margin-bottom: 30px;
   margin-top: 30px;
+  @media screen and (min-width: 768px) {
+    @include fonts(14px, 25px, 700, 0.04em);
+    margin-bottom: 40px;
+  }
+  @media screen and (min-width: 1280px) {
+    @include fonts(16px, 28px, 700, 0.04em);
+    margin-bottom: 62px;
+  }
 }
 .products__btn {
   width: 40px;
@@ -119,5 +133,10 @@
     width: 220px;
     height: 220px;
     top: -102px;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 335px;
+    height: 335px;
+    top: -210px;
   }
 }
