--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="contacts__section">
-      <p class="contacts__category">FOODTRUCK</p>
+      <p class="contacts__category category-green">FOODTRUCK</p>
       <p class="contacts__categorycity">Los Angeles</p>
       <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
 
