--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,7 +1,38 @@
 .about-section {
-  padding-top: 125px;
-  padding-bottom: 125px;
+  padding-top: 113px;
+  padding-bottom: 40px;
   background-color: $sectionbgColor;
+  @media screen and (min-width: 768px) {
+    padding-top: 165px;
+    padding-bottom: 0px;
+  }
+}
+
+.about-container_position {
+  position: relative;
+}
+
+.about-container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+
+.about__text-container {
+  padding-left: 30px;
+  padding-right: 30px;
+  @media screen and (min-width: 768px) {
+    padding-left: 0px;
+    padding-right: 0px;
+    width: 340px;
+    padding-top: 40px;
+    margin-left: 17px;
+    flex-shrink: 2222;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 463px;
+    margin-left: 74px;
+  }
 }
 
 .about__pre-title {
@@ -28,17 +59,6 @@
     margin-bottom: 50px;
   }
 }
-
-.about-main-container {
-  @media screen and (min-width: 768px) {
-    display: flex;
-    position: relative;
-  }
-}
-
-// .about__image-cow {
-//   margin-bottom: 46px;
-// }
 
 .about__image-cow {
   background-image: url(/images/about-cow-mobile.png);
@@ -73,25 +93,6 @@
   }
 }
 
-.about__container {
-  padding-left: 30px;
-  padding-right: 30px;
-  position: relative;
-  @media screen and (min-width: 768px) {
-    padding-left: 0px;
-    padding-right: 0px;
-    width: 340px;
-    padding-top: 40px;
-    margin-left: 17px;
-    flex-shrink: 2222;
-    position: static;
-  }
-  @media screen and (min-width: 1280px) {
-    width: 463px;
-    margin-left: 74px;
-  }
-}
-
 .about__text {
   @include fonts(12px, 19px, 500, 0);
   position: sticky;
@@ -110,8 +111,6 @@
     @include fonts(14px, 25px, 500, 0.04em);
   }
   @media screen and (min-width: 1280px) {
-    // position: sticky;
-    // z-index: 3;
   }
 }
 
@@ -130,7 +129,6 @@
   @include fonts(14px, 18px, 700, 0);
   color: $accentColor;
   align-items: center;
-  // -webkit-appearance: button;
   transition: background-color $animation;
   @media screen and (min-width: 768px) {
     margin-top: 62px;
@@ -148,9 +146,9 @@
 .about__image-milk {
   display: block;
   position: absolute;
-  top: 65%;
-  left: -11%;
-  right: -11%;
+  top: 82%;
+  left: -5%;
+  right: -7%;
   transform: translateY(-50%);
 
   @media screen and (min-width: 767px) {
@@ -158,11 +156,8 @@
   }
   @media screen and (min-width: 1280px) {
     display: block;
-    right: 4%;
-    top: 78%;
+    top: 75%;
+    left: -11%;
+    right: -11%;
   }
-}
-
-.about__page {
-  margin-bottom: 40px;
 }
