feature/menu-modal

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,37 +28,34 @@
                 </svg>
             </button>
 
-            <button type="button" class="header-button header-button--hide">Buy now ></button>
+            <button type="button" class="header-button header-button--hide" data-modal-open>Buy now ></button>
     <!-- ----------------НАВИГАЦИЯ-------------------- -->
             <nav>
                 <ul class="header-list">
                     <li class="header-list__item">
-                        <a href="#" class="header-list__link">Home</a>
+                        <a href="block1" class="header-list__link">Home</a>
                     </li>
 
                     <li class="header-list__item">
-                        <a href="#" class="header-list__link">About us</a>
+                        <a href="#block2" class="header-list__link">About us</a>
                     </li>
 
                     <li class="header-list__item">
-                        <a href="#" class="header-list__link">How it's made?</a>
+                        <a href="#block3" class="header-list__link">How it's made?</a>
                     </li>
 
                     <li class="header-list__item">
-                        <a href="#" class="header-list__link">Our products</a>
+                        <a href="#block4" class="header-list__link">Our products</a>
                     </li>
 
                     <li class="header-list__item">
-                        <a href="#" class="header-list__link">Contact</a>
+                        <a href="#block5" class="header-list__link">Contact</a>
                     </li>
                 </ul>
             </nav>
         </div>
     <!-- ------------КНОПКА "BUY NOW"----------------- -->
-        <button type="button" class="header-button header-btn--hide">Buy now ></button>
+        <button type="button" class="header-button header-btn--hide" data-modal-open>Buy now ></button>
     </div>
 </header>
 
-<!-- <script src="js/modal.js"></script>
-
-<script src="js/mobile-menu.js"></script> -->
