--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -122,6 +122,7 @@
     border-bottom-right-radius: 22px;
     width: 160px;
     height: 44px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     &.header-button--hide {
         width: 209px;
         margin-bottom: 21px;
@@ -143,7 +144,8 @@
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover, &:focus {
-        background-color: $secondaryhoverBtn;
+        background-color: $hoverBtn;
+        color:$primaryTextColor;
     }
 }
 
@@ -196,7 +198,7 @@
     &:hover, &:focus {
         color: $accentColor;
     }
-    &.link--current {
+}
+a.active {
         color: $accentColor;
     }
-}
