--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -7,7 +7,9 @@
     @media screen and(min-width: 768px){
         padding: 0 74px;
     }
-    
+    @media screen and(min-width: 1280px){
+        padding: 0 177px;
+    }
 }
 
 .review-article-container{
@@ -18,6 +20,10 @@
         padding: 30px 36px 28px 60px;
         margin-bottom: 8px;
        
+    }
+    @media screen and(min-width: 1280px){
+        padding: 47px 54px 32px 59px;
+        margin-bottom: -1px;
     }
 }
 
@@ -34,7 +40,12 @@
     @media screen and(min-width: 768px){
         padding-left: 20px;
         padding-right: 44px;
-        @include fonts(14px, 30px, 500, 0.04em)
+        @include fonts(14px, 30px, 500, 0.04em);
+    }
+    @media screen and(min-width: 1280px){
+        padding-left: 28px;
+        padding-right: 35px;
+        @include fonts(16px, 30px, 500, 0.04em);
     }
 }
 
@@ -51,6 +62,10 @@
         top: -25px;
         left: -26px;
     }
+    @media screen and(min-width: 1280px){
+        top: -22px;
+        left: -16px;
+    }
 }
 
 .customer-img{
@@ -60,6 +75,9 @@
     @media screen and(min-width: 768px){
         margin-bottom: 19px;
     }
+    @media screen and(min-width: 1280px){
+        margin-bottom: 15px;
+    }
 }
 
 .dots{
@@ -68,6 +86,10 @@
     @media screen and(min-width: 768px){
         margin-bottom: 14px;
     }
+    @media screen and(min-width: 1280px){
+        margin-bottom: 15px;
+    }
+
 }
 
 .dots__item{
@@ -96,6 +118,9 @@
     @media screen and(min-width: 768px){
         margin-bottom: 35px;
         @include fonts(16px, 30px, 500);
+    }
+    @media screen and(min-width: 1280px){
+        @include fonts(20px, 37px, 500);
     }
 }
 
