--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -7,7 +7,7 @@ $iconColor: #fea5bb;
 .footer__block {
   max-width: 480px;
   width: 100%;
-  padding-top: 50px;
+  // padding-top: 50px;
 
   @media screen and (min-width: 768px) {
     display: flex;
