--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -90,15 +90,15 @@
     background: $sectionbgColor;
     background-position-y: 102px;
     justify-content: center;
-//     background-image: url(/images/contacts-bg1x.png);
+    background-image: url(/images/contacts-bg1x.png);
     background-repeat: no-repeat;
     width: 100%;
     min-height: 573px;
-//     background-image: url(/images/contacts-bg1x.png);
+    background-image: url(/images/contacts-bg1x.png);
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       max-width: 1600px;
-      // background-image: url(/images/contacts-bg2x.png);
+      background-image: url(/images/contacts-bg2x.png);
     }
   }
 }
