--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -80,7 +80,7 @@
   }
 }
 
-.contacts-overlay {
+.contact-overlay {
   @media screen and (min-width: 1280px) {
     margin-left: auto;
     margin-right: auto;
