--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -86,7 +86,7 @@
   @media screen and (min-width: 1280px) {
     margin-left: auto;
     margin-right: auto;
-    display: flex;
+    // display: flex;
     background: $sectionbgColor;
     background-position-y: 102px;
     justify-content: center;
