--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -5,9 +5,11 @@
     top: 0;
     left: 0;
     width: 100%;
+    background-color: rgba(255, 165, 186, 0.5);
 }
 
 .header-box {
+    background-color: rgba(255, 165, 186, 0.7);
     @media screen and (min-width: 480px) {
         position: absolute;
         left: 50%;
@@ -104,7 +106,7 @@
     }
 
     .menu-button:hover &.menu-button--hover, .menu-button:focus &.menu-button--hover {
-        fill: $rareColor;
+        fill: $primaryTextColor;
     }
 }
 
