--- a/src/sass/_menu-modal.scss
+++ b/src/sass/_menu-modal.scss
@@ -119,6 +119,7 @@
 
 .modal-form__label {
     margin-bottom: 4px;
+    transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
     &.form__label--radio:hover, &.form__label--radio:focus {
         color: $hoverBtn;
     }
@@ -175,6 +176,7 @@
 .form__label--radio {
     display: flex;
     align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .radio-input:checked + & {
         color: $hoverBtn;
     }
@@ -294,7 +296,8 @@
     margin-left: auto;
     margin-right: auto;
 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover, &:focus {
         background-color: $hoverBtn;
