--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -48,6 +48,7 @@
     margin-bottom: 0;
     margin-right: 31px;
     padding: 51px 44px 62px 43px;
+
     &:last-child {
       margin-right: 0px;
     }
@@ -285,6 +286,8 @@
   width: 161.45px;
   height: 44px;
   margin-bottom: 10px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 4px 0px;
+
   @media screen and (min-width: 768px) {
     width: 191.45 px;
     height: 44px;
@@ -317,6 +320,8 @@
   text-align: center;
   border: transparent;
   color: $accentColor;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 4px 0px;
+
   @media screen and (min-width: 768px) {
     width: 174.05px;
     height: 44px;
