заменяет картинки в галерее и исправляет фон

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,19 +3,19 @@
     <h2 class="visually-hidden">Gallery</h2>
     <picture>
       <source
-        srcset="./images/gallery_desktop1x.jpg 1x, ./images/gallery_desktop2x.jpg 2x"
+        srcset="./images/gallery_desktop1x.png 1x, ./images/gallery_desktop2x.png 2x"
         media="(min-width: 1280px)"
       />
       <source
-        srcset="./images/gallery_tablet1x.jpg 1x, ./images/gallery_tablet2x.jpg 2x"
+        srcset="./images/gallery_tablet1x.png 1x, ./images/gallery_tablet2x.png 2x"
         media="(min-width: 768px)"
       />
       <source
-        srcset="./images/gallery_mob1x.jpg 1x, ./images/gallery_mob2x.jpg 2x"
+        srcset="./images/gallery_mob1x.png 1x, ./images/gallery_mob2x.png 2x"
         media="(min-width: 320px)"
       />
       <img
-        src="./images/gallery_mob1x.jpg"
+        src="./images/gallery_mob1x.png"
         class="gallery__example-img"
         alt="Types of IceCream"
         width="100%"
