--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -15,7 +15,7 @@
         media="(min-width: 320px)"
       />
       <img
-        src="./images/gallery_mob1x.png"
+        src="./images/gallery_desktop1x.png"
         class="gallery__example-img"
         alt="Types of IceCream"
         width="100%"
