--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -122,6 +122,7 @@
   display: inline-flex;
   align-items: center;
   margin-top: 30px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 4px 0px;
   z-index: 222;
   position: sticky;
   border: transparent;
