--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="contact contact-overlay">
+<section id="block5" class="contact contact-overlay">
   <h2 class="visually-hidden">office</h2>
 
   <div class="contacts container contacts-top">
