--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,4 +1,4 @@
-<section class="customer-review">
+<section id="block2" class="customer-review">
     <div class="container customer-review-container">
         <picture> 
             <source srcset="/images/customer-emily_1x.webp" type="image/webp">    
