--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about-section" id="about">
+<section id="block3" class="about-section">
   <div class="container">
     <p class="about__pre-title">tradition and love</p>
     <h2 class="about__title">how it’s made?</h2>
