--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class=" section__products" id="products" >
+<section id="block4" class=" section__products">
     <div class="container products--container ">
     <p for="" class="products__label">100% natural</p>
     <h2 class="products__main-title">products</h2>
