--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="block1">
     <div class="container hero__box">
         <svg class="hero__bg-circle">
             <use href="images/symbol-defs.svg#icon-hero-circle"></use>
