--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about-section" id="about" id="block3">
+<section class="about-section" id="block3">
 
   <div class="container">
     <p class="about__pre-title">tradition and love</p>
