--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class=" section__products" id="products" id="block4">
+<section class=" section__products" id="block4">
 
     <div class="container products--container ">
     <p for="" class="products__label">100% natural</p>
