описание на about

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -7,15 +7,14 @@
       <div class="about__image-cow"></div>
       <div class="about__text-container">
         <p class="about__text about__text_black">
-          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus
-          lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.
+          Our ice cream factory is located in a unique place - near the purest mountain river and a picturesque valley with pastures on which our cows graze.
+     Thanks to the unsurpassed nature and the careful care of farmers, we collect the best milk for ice cream production.
         </p>
         <p class="about__text about__text_gray about__text_indent">
-          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci
-          in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna
-          maximus. Cras massa nibh, tincidunt.
+          Our ice cream is made only from fresh milk and organic fruits.
+       In the best traditions and with love, we create masterpieces that will allow you to enjoy the wonderful taste of natural, fruity and creamy ice cream.
         </p>
-        <p class="about__text about__text_gray">Aliquam erat volutpat. Aenean accumsan.</p>
+        <p class="about__text about__text_gray">Our ice cream is the most delicious and favorite.</p>
         <span class="about__image-milk">
           <picture>
             <source
