--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,21 +1,30 @@
 <section class="about-section" id="block3">
-
   <div class="container">
     <p class="about__pre-title">tradition and love</p>
     <h2 class="about__title">how it’s made?</h2>
     <div class="about-container about-container_position">
       <div class="about__image-cow"></div>
       <div class="about__text-container">
-        <p class="about__text about__text_black">
-          Our ice cream factory is located in a unique place - near the purest mountain river and a picturesque valley with pastures on which our cows graze.
-     Thanks to the unsurpassed nature and the careful care of farmers, we collect the best milk for ice cream production.
+        <p class="about__text about__text_black _anim-image">
+          Our ice cream factory is located in a unique place - near the purest mountain river and a
+          picturesque valley with pastures on which our cows graze. Thanks to the unsurpassed nature
+          and the careful care of farmers, we collect the best milk for ice cream production.
         </p>
-        <p class="about__text about__text_gray about__text_indent">
-          Our ice cream is made only from fresh milk and organic fruits.
-       In the best traditions and with love, we create masterpieces that will allow you to enjoy the wonderful taste of natural, fruity and creamy ice cream.
+        <p class="about__text about__text_gray about__text_indent _anim-image">
+          Our ice cream is made only from fresh milk and organic fruits. In the best traditions and
+          with love, we create masterpieces that will allow you to enjoy the wonderful taste of
+          natural, fruity and creamy ice cream.
         </p>
-        <p class="about__text about__text_gray">Our ice cream is the most delicious and favorite.</p>
-        <span class="about__image-milk">
+        <p class="about__text about__text_gray _anim-image">
+          Our ice cream is the most delicious and favorite.
+        </p>
+        <a href="" class="about__button-link"
+          >Read More
+          <svg class="about__button-icon" width="8" height="9">
+            <use href="/images/symbol-defs.svg#icon-about-arrow"></use>
+          </svg>
+        </a>
+        <span class="about__image-milk _anim-image">
           <picture>
             <source
               media="(min-width: 320px )"
@@ -30,12 +39,6 @@
             <img src="/images/milk-bg-destop.png" alt="milk" height="534" />
           </picture>
         </span>
-        <a href="" class="about__button-link"
-          >Read More
-          <svg class="about__button-icon" width="8" height="9">
-            <use href="/images/symbol-defs.svg#icon-about-arrow"></use>
-          </svg>
-        </a>
       </div>
     </div>
   </div>
