--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -97,6 +97,9 @@
   @include fonts(12px, 19px, 500, 0);
   position: sticky;
   z-index: 3;
+  transform: translate(0px, 120%);
+  opacity: 0;
+  transition: all 0.8s ease 0s;
   &_black {
     color: $secondaryTextColor;
     margin-bottom: 40px;
@@ -112,6 +115,12 @@
   }
   @media screen and (min-width: 1280px) {
   }
+}
+
+.about__text._active {
+  transform: translate(0px, 0px);
+  opacity: 1;
+  transition: all 0.8s ease 0.5s;
 }
 
 .about__button-link {
@@ -150,6 +159,8 @@
   top: 82%;
   left: -5%;
   right: -7%;
+  transition: all 0.8s ease 0s;
+  opacity: 0;
   transform: translateY(-50%);
 
   @media screen and (min-width: 767px) {
@@ -161,4 +172,10 @@
     left: -11%;
     right: -11%;
   }
+}
+
+.about__image-milk._active {
+  opacity: 1;
+  transform: translateY(-50%);
+  transition: all 0.8s ease 0.3s;
 }
