--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -299,13 +299,16 @@
     height: 44px;
     margin-right: 15px;
   }
+  
+  &:hover,
+  &:focus {
+    background-color: #d41342;
+    cursor: pointer;
+  }
+  
 }
 
-.collaboration__btn:hover,
-.collaboration__btn:focus {
-  background-color: #d41342;
-  cursor: pointer;
-}
+
 
 .collaboration__btntwo {
   background: $primaryTextColor;
@@ -329,6 +332,12 @@
   @media screen and (min-width: 1280px) {
     width: 180px;
     height: 44px;
+  }
+  
+  &:hover,
+  &:focus {
+    background-color: $secondaryhoverBtn;
+    cursor: pointer;
   }
 }
 
