--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,83 +1,96 @@
-<section class="contact contact-overlay">
-  <h2 class="visually-hidden">Фильтры</h2>
+<section class="contact contact-overlay" id="block5">
+  <h2 class="visually-hidden">office</h2>
+
   <div class="contacts container contacts-top">
+    <!-- первая карточка -->
+
     <div class="contacts__section">
       <p class="contacts__category">CAFE</p>
       <p class="contacts__categorycity">Chicago</p>
       <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-
       <p class="contacts__timeday">Monday - Friday</p>
       <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
       <p class="contacts__timeday">Saturday - Sunday</p>
       <p class="contacts__time">08:00 AM 16:00 PM</p>
 
-      <ul class="contacts__list">
-        <li class="contacts__item link">
-          <a href="+61(0)383766284" class="contacts__tel link">+61(0) 383 766 284</a>
-        </li>
-        <li class="contacts__item link">
-          <a href="noreply@envato.com" class="contacts__mail link"></a>
-        </li>
-      </ul>
+      <address>
+        <ul class="contacts__list">
+          <li class="contacts__item link">
+            <a href="tel:+610383766284" class="contacts__tel link">+61(0) 383 766 284</a>
+          </li>
+          <li class="contacts__item link">
+            <a href="mailto:noreply@envato.com" class="contacts__mail link">noreply@envato.com</a>
+          </li>
+        </ul>
+      </address>
     </div>
+
+    <!-- вторая карточка -->
 
     <div class="contacts__section">
       <p class="contacts__category category-green">FOODTRUCK</p>
       <p class="contacts__categorycity">Los Angeles</p>
       <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-
       <p class="contacts__timeday">Monday - Friday</p>
       <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
       <p class="contacts__timeday">Saturday - Sunday</p>
       <p class="contacts__time">08:00 AM 16:00 PM</p>
 
-      <ul class="contacts__list">
-        <li class="contacts__item link">
-          <a href="+61(0)383766284" class="contacts__tel link">+61(0) 383 766 284</a>
-        </li>
-        <li class="contacts__item link">
-          <a href="noreply@envato.com" class="contacts__mail link"></a>
-        </li>
-      </ul>
+      <address>
+        <ul class="contacts__list">
+          <li class="contacts__item link">
+            <a href="tel:+610383766284" class="contacts__tel link">+61(0) 383 766 284</a>
+          </li>
+          <li class="contacts__item link">
+            <a href="mailto:noreply@envato.com" class="contacts__mail link">noreply@envato.com</a>
+          </li>
+        </ul>
+      </address>
     </div>
 
-    <div class="contacts__section contacts__section-last">
+    <!-- третья карточка -->
+
+    <div class="contacts__section">
       <p class="contacts__category">CAFE</p>
       <p class="contacts__categorycity">New York</p>
       <p class="contacts__describe">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-
       <p class="contacts__timeday">Monday - Friday</p>
       <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
       <p class="contacts__timeday">Saturday - Sunday</p>
       <p class="contacts__time">08:00 AM 16:00 PM</p>
 
-      <ul class="contacts__list">
-        <li class="contacts__item link">
-          <a href="+61(0)383766284" class="contacts__tel link">+61(0) 383 766 284</a>
-        </li>
-        <li class="contacts__item link">
-          <a href="noreply@envato.com" class="contacts__mail link"></a>
-        </li>
-      </ul>
+      <address>
+        <ul class="contacts__list">
+          <li class="contacts__item link">
+            <a href="tel:+610383766284" class="contacts__tel link">+61(0) 383 766 284</a>
+          </li>
+          <li class="contacts__item link">
+            <a href="mailto:noreply@envato.com" class="contacts__mail link">noreply@envato.com</a>
+          </li>
+        </ul>
+      </address>
     </div>
   </div>
-</section>
 
-<div class="collaboration contacts-bottom">
-  <ul class="collaboration__list">
-    <li class="collaboration__item">
-      <button class="collaboration__btn" type="button">
-        Our Locations<svg class="collaboration__svg">
-          <use href="./images/symbol-defs.svg#icon-vector-white"></use>
-        </svg>
-      </button>
-    </li>
-    <li class="collaboration__item">
-      <button class="collaboration__btntwo" type="button">
-        Franchise<svg class="collaboration__svg-red">
-          <use href="./images/symbol-defs.svg#icon-vector-red"></use>
-        </svg>
-      </button>
-    </li>
-  </ul>
-</div>
+  <div class="collaboration contacts-bottom">
+    <ul class="collaboration__list">
+      <li class="collaboration__item">
+        <button type="button" class="collaboration__btn">
+          Our Locations
+          <svg class="collaboration__svg">
+            <use href="./images/symbol-defs.svg#icon-vector-white"></use>
+          </svg>
+        </button>
+      </li>
+
+      <li class="collaboration__item">
+        <button type="button" class="collaboration__btntwo">
+          Franchise
+          <svg class="collaboration__svg-red">
+            <use href="./images/symbol-defs.svg#icon-vector-red"></use>
+          </svg>
+        </button>
+      </li>
+    </ul>
+  </div>
+</section>
