--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -3,6 +3,7 @@
     background: linear-gradient(180deg, #ffffff 7%, #fff5f6 0, #ffffff 0, #fff5f6 0%);
     margin-left: auto;
     margin-right: auto;
+
     @media screen and (min-width: 768px) {
       background: linear-gradient(180deg, #ffffff 15%, #fff5f6, #ffffff, #fff5f6 0%);
     }
@@ -47,6 +48,7 @@
     margin-bottom: 0;
     margin-right: 31px;
     padding: 51px 44px 62px 43px;
+
     &:last-child {
       margin-right: 0px;
     }
@@ -84,11 +86,10 @@
   @media screen and (min-width: 1280px) {
     margin-left: auto;
     margin-right: auto;
-    display: flex;
+    // display: flex;
     background: $sectionbgColor;
     background-position-y: 102px;
     justify-content: center;
-    background-image: url(/images/contacts-bg1x.png);
     background-repeat: no-repeat;
     width: 100%;
     min-height: 573px;
@@ -284,6 +285,8 @@
   width: 161.45px;
   height: 44px;
   margin-bottom: 10px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 4px 0px;
+
   @media screen and (min-width: 768px) {
     width: 191.45 px;
     height: 44px;
@@ -316,6 +319,8 @@
   text-align: center;
   border: transparent;
   color: $accentColor;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 4px 4px 0px;
+
   @media screen and (min-width: 768px) {
     width: 174.05px;
     height: 44px;
@@ -333,7 +338,7 @@
   padding-bottom: 113px;
   @media screen and (min-width: 768px) {
     display: flex;
-    padding-bottom: 158px;
+    padding-bottom: 165px;
   }
   @media screen and (min-width: 1280px) {
     display: flex;
