--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -18,6 +18,7 @@
     justify-content: center;
   }
   @media screen and (min-width: 1280px) {
+    background-position-y: 200px;
     margin-bottom: 86px;
     background-image: url(/images/contacts-bg1x.png);
     justify-content: center;
