--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,7 +15,7 @@
             <img src="/images/hero-milk-desk.png" alt="mug of milk" width="188" height="191" />
         </picture>
         <div class="hero__inform">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+            <p>Milk is the main ingredient in ice cream. The history of our milk - from its origin to finished products ...</p>
             <button type="button" class="hero__btn-expand">
                 <svg class="hero__icon">
                     <use href="images/symbol-defs.svg#icon-products-arrow"></use>
