--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -11,7 +11,7 @@
       <p class="contacts__timeday">Monday - Friday</p>
       <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
       <p class="contacts__timeday">Saturday - Sunday</p>
-      <p class="contacts__time">08:00 AM 16:00 PM</p>
+      <p class="contacts__time">08:00 AM - 16:00 PM</p>
 
       <address>
         <ul class="contacts__list">
@@ -34,7 +34,7 @@
       <p class="contacts__timeday">Monday - Friday</p>
       <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
       <p class="contacts__timeday">Saturday - Sunday</p>
-      <p class="contacts__time">08:00 AM 16:00 PM</p>
+      <p class="contacts__time">08:00 AM - 16:00 PM</p>
 
       <address>
         <ul class="contacts__list">
@@ -57,7 +57,7 @@
       <p class="contacts__timeday">Monday - Friday</p>
       <p class="contacts__time-weekend">06:00 AM - 10:00 PM</p>
       <p class="contacts__timeday">Saturday - Sunday</p>
-      <p class="contacts__time">08:00 AM 16:00 PM</p>
+      <p class="contacts__time">08:00 AM - 16:00 PM</p>
 
       <address>
         <ul class="contacts__list">
