--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,17 +2,15 @@
     <div class="container header-box">
 
     <!-- --------------ЛОГОТИП------------------------- -->
+    <a href="#block1">
         <picture class="header-logo">
-            <img 
-                srcset="
-                    images/logo1_1x.png 1x,
-                    images/logo1_2x.png 2x,
-                    images/logo1_3x.png 3x"
-                src="images/logo1_1x.png" 
-                alt="Logo" 
-                width="199" 
-            />
+            <img srcset="
+                            images/logo1_1x.png 1x,
+                            images/logo1_2x.png 2x,
+                            images/logo1_3x.png 3x" src="images/logo1_1x.png" alt="Logo" width="199" />
         </picture>
+    </a>
+        
     <!-- -------------------МЕНЮ---------------------- -->
         <button type="button" class="menu-button menu-button--dist js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
             <svg class="menu-button__icon menu-button--hover">
@@ -33,7 +31,7 @@
             <nav>
                 <ul class="header-list">
                     <li class="header-list__item">
-                        <a href="block1" class="header-list__link">Home</a>
+                        <a href="#block1" class="header-list__link">Home</a>
                     </li>
 
                     <li class="header-list__item">
