--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,8 +2,8 @@
     <div class="container header-box">
 
     <!-- --------------ЛОГОТИП------------------------- -->
-    <a href="#block1">
-        <picture class="header-logo">
+    <a href="#block1" class="logo-link">
+        <picture>
             <img srcset="
                             images/logo1_1x.png 1x,
                             images/logo1_2x.png 2x,
