--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,6 +8,7 @@
 }
 
 .header-box {
+    border-radius: 24px;
     background-color: rgba(255, 165, 186, 0.4);
     @media screen and (min-width: 480px) {
         position: absolute;
