--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,11 +1,11 @@
 .contact {
   @media screen and (min-width: 320px) {
-    background: linear-gradient(180deg, #ffffff 7%, #fff5f6 0, #ffffff 0, #fff5f6 0%);
+    background: linear-gradient(180deg, #ffffff 6%, #fff5f6 0, #ffffff 0, #fff5f6 0%);
     margin-left: auto;
     margin-right: auto;
 
     @media screen and (min-width: 768px) {
-      background: linear-gradient(180deg, #ffffff 15%, #fff5f6, #ffffff, #fff5f6 0%);
+      background: linear-gradient(180deg, #ffffff 11%, #fff5f6, #ffffff, #fff5f6 0%);
     }
   }
   @media screen and (min-width: 1280px) {
@@ -127,6 +127,7 @@
   line-height: 1.5;
   color: $secondaryTextColor;
   margin-bottom: 10px;
+  font-weight: 500;
   @media screen and (min-width: 768px) {
     font-size: 14px;
     margin-bottom: 14px;
