--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,7 +14,7 @@
             <img src="/images/hero-milk-desk.png" alt="mug of milk" width="188" height="191" />
         </picture>
         <div class="hero__inform">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+            <p>Milk is the main ingredient in ice cream. The history of our milk - from its origin to finished products ...</p>
             <button type="button" class="hero__btn-expand">
                 <svg class="hero__icon">
                     <use href="images/symbol-defs.svg#icon-products-arrow"></use>
@@ -28,12 +28,18 @@
             <img src="/images/hero-icecream-desk.png" alt="ice cream cone" width="170" height="410"/>
         </picture>
         <ul class="representation-list">
-            <li class="representation-list__title"><p class="representation-list__text"><span>16</span> cafes</p><svg class="representation-list__icon">
-                <use href="images/symbol-defs.svg#icon-hero-ellipse"></use>
-            </svg></li>
-            <li class="representation-list__title"><p class="representation-list__text"><span>23</span> food trucks</p><svg class="representation-list__icon">
-                <use href="images/symbol-defs.svg#icon-hero-ellipse"></use>
-            </svg></li>
+            <li class="representation-list__title">
+                <a href="https://www.google.com/maps/place/GoIT/@50.4249619,30.531895,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4d96f5139689b:0xa1f7c65300bebad1!8m2!3d50.4249597!4d30.5340916" target="_blank" class="representation-list__link"><span>16</span> cafes</a>
+                <svg class="representation-list__icon">
+                    <use href="images/symbol-defs.svg#icon-hero-ellipse"></use>
+                </svg>
+            </li>
+            <li class="representation-list__title">
+                <a href="https://www.instagram.com/goitclub/" target="_blank" class="representation-list__link"><span>23</span> food trucks</a>
+                <svg class="representation-list__icon">
+                    <use href="images/symbol-defs.svg#icon-hero-ellipse"></use>
+                </svg>
+            </li>
         </ul>
         <picture class="hero__client">
             <source media="(min-width: 1280px)"
