--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -276,6 +276,7 @@
     position: relative;
     width: 51px;
     height: 44px;
+    color: $primaryTextColor;
     text-align: right;
     z-index: 2;
     cursor: pointer;
