--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -26,15 +26,14 @@
 }
 .advantage-list__item {
     // width: 230px;
-    margin-bottom: 38px;
+    &:not(:last-child) {margin-bottom: 38px} ;
     @media screen and (min-width: 480px) {
     flex-basis: calc(100% / 3 - 60px);
     margin-left: 60px;
     }
     @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 3 - 30px);
-    margin-left: 30px;
-        
+    margin-left: 30px;  
     }
 }
 .advantage-list__icon {
