вносит изменения в разметку галереи

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -15,10 +15,9 @@
         media="(min-width: 320px)"
       />
       <img
-        src="./images/gallery_desktop1x.png"
+        src="./images/gallery_mob1x.png"
         class="gallery__example-img"
         alt="Types of IceCream"
-        width="100%"
       />
     </picture>
   </div>
