--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,7 +1,7 @@
 <section class=" section__products" id="block4">
 
     <div class="container products--container ">
-    <p for="" class="products__label">100% natural</p>
+    <p class="products__label">100% natural</p>
     <h2 class="products__main-title">products</h2>
     <ul class="products">
         <li class="products__item products__item--pink">
