--- a/src/sass/_menu-modal.scss
+++ b/src/sass/_menu-modal.scss
@@ -40,7 +40,7 @@
     z-index: 105;
     transform: scale(1);
 
-    border-radius: 4px;
+    border-radius: 20px;
     background-color: $titleColor;
     padding-left: 20px;
     padding-right: 20px;
@@ -128,8 +128,8 @@
 .modal-form__input {
     padding: 12px 16px 12px 35px;
     max-width: 100%;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
+    border: 2px solid transparent;
+    border-radius: 12px;
     color: $hoverBtn;
     @include fonts(12px, 15.62px, 400, 0.02em);
 
